# osdev

./: .gitignore  CMakeLists.txt  build.sh  build_.sh  buildr.sh  cmake-config.cmake  cmake-toolchain.cmake  config.cmake  debug.sh  dump.txt  linker.ld  ree.txt  run.sh  serial.txt  toolchain-common.cmake  toolchain.cmake
kernel/: CMakeLists.txt  dl_init.cpp  kmain.cpp  libc++_init.hpp  libk_init.h  limine.conf  linker-shared.ld  linker.ld
kernel/abi/: icxxabi.cpp
kernel/cpu/: cpu.asm  cpu.cpp
kernel/data/: limine.conf
kernel/driver/: serial.cpp
kernel/file/: bmp.hpp
kernel/filesystem/: filesystem.cpp  filesystem.hpp  idk_file.hpp
kernel/include/: bitmap.hpp  bmp.hpp  inplace_vector.hpp  kassert.h  kmalloc.h  kmemxx.hpp  kpanic.hpp  kthread-ree.hpp  kthread.hpp  static_vector.hpp
kernel/include/compositor/: compositor.hpp
kernel/include/cpu/: cpu.hpp  cpuid.hpp  idt.hpp  regs.hpp  scheduler.hpp
kernel/include/cringe/: font.hpp  vec.hpp
kernel/include/driver/: ac97.hpp  acpi copy.hpp  apic.hpp  framebuffer.hpp  interface.hpp  keyboard.hpp  mouse.hpp  pci.hpp  pic.hpp  pit.hpp  ramfs.hpp  serial.hpp  svga.hpp  video.hpp  virtio-gpu.hpp
kernel/include/filesystem/: bmp.hpp  initrd.hpp  ustar.hpp  vfs.hpp  vfs2.hpp
kernel/include/gui/: gui.hpp  image.hpp
kernel/include/kernel/: boot_limine.hpp  buddy_allocator.hpp  clock.hpp  event.hpp  input.hpp  interrupt.hpp  kscancode.h  kstackframe.h  kstring.h  kvideo.hpp  linkedlist.hpp  lock-tmp.hpp  log.hpp  memory.hpp  module.hpp  ringbuffer.hpp  syscall.h  tty.hpp  video.hpp
kernel/include/smp/: barrier.hpp  sched.hpp  scheduler.hpp  smp.hpp
kernel/include/sym/: sym.hpp  sym_kernel.hpp  sym_kthread.hpp  sym_kvideo.hpp  sym_libc.hpp  sym_t.hpp  sym_type.hpp
kernel/include/sys/: acpi.hpp  apic.hpp  dl.hpp  event.hpp  interrupt.hpp  process.hpp  sys.hpp  syscall.hpp  tty0.hpp
kernel/include/task_test/: switch.asm  task.hpp
kernel/include/util/: bitmanip.hpp  bitmap.hpp  linear_allocator.hpp  linkedlist.hpp
kernel/include/wm/: button.hpp  frame.hpp  image.hpp  text.hpp  window.hpp
kernel/memory/: buddy_allocator.cpp  linear_allocator.cpp
kernel/src/: boot.cpp  crti.asm  crtn.asm  init.cpp  keyboard.cpp  kmain-test.cpp  kmain.cpp  mouse.cpp  tinyubsan.cpp
kernel/src/coreutil/: kassert.cpp  kmalloc.cpp  kmalloc.hpp  kpanic.cpp  kstring.cpp  kthread-2.cpp  kthread.cpp  scheduler-2.cpp  scheduler.cpp
kernel/src/cpu/: CMakeLists.txt  cpu.asm  cpu.cpp  gdt.asm  gdt.cpp  idt.asm  idt.cpp  scheduler.cpp  smp.cpp  smp.hpp  tss.asm  tss.cpp
kernel/src/cringe/: font.cpp
kernel/src/driver/: ac97.cpp  apic.cpp  framebuffer.cpp  interface.cpp  ioapic.cpp  keyboard.cpp  lapic.cpp  lapic_trap.hpp  madt.cpp  mouse.cpp  pci-ree.cpp  pci.cpp  pic.cpp  pit.cpp  ramfs.cpp  serial.cpp  svga.cpp  svga3d_reg.hpp  svga_overlay.hpp  svga_reg.hpp  video.cpp
kernel/src/filesystem/: initrd.cpp  ramfs.cpp  ustar.cpp  vfs.cpp  vfs2.cpp
kernel/src/gui/: container.cpp  font.cpp  gui.cpp
kernel/src/ipc/: pipe.cpp
kernel/src/kernel/: boot_limine.cpp  buddy_allocator.cpp  clock.cpp  elf64.cpp  event.cpp  heap_allocator.cpp  heap_allocator.hpp  input.cpp  ioport.cpp  kassert.cpp  kmalloc.cpp  kmemxx.cpp  kpanic.cpp  kprintf.cpp  kthread.cpp  kvideo.cpp  kvideo.hpp  linear_allocator.cpp  linkedlist.cpp  log.cpp  memory.cpp  module.cpp  module_elf.cpp  tty.cpp  vfs2.cpp
kernel/src/memory/: heap.cpp  pmm.cpp  pmm2.cpp  pmm2.hpp  vmm.cpp  vmo.cpp  vmo.hpp
kernel/src/old/: bitmanip.hpp  io.cpp  log.hpp
kernel/src/smp/: process.cpp  sched.cpp  scheduler.cpp  smp.cpp  smp.hpp  smp2.cpp  smp2.hpp
kernel/src/sym/: sym.cpp  sym_libc.cpp
kernel/src/sys/: dl.cpp  event.cpp  syscall.cpp  tty0.cpp
kernel/src/syscall/: syscall.cpp  syscall.hpp
kernel/src/syslog/: CMakeLists.txt  log.cpp
kernel/src/temp/: cpu.hpp  cpuid.hpp
kernel/src/util/: linear_allocator.cpp
kernel/src/wm/: CMakeLists.txt  button.cpp  element.cpp  frame.cpp  gui.cpp  image.cpp  mouse.cpp  render.cpp  text.cpp  window.cpp  wm copy.cpp  wm.cpp
lib/libc/: CMakeLists.txt  build.sh
lib/libc++/: CMakeLists.txt
lib/libc++/include/: algorithm  algorithm.inl  array  atomic  bit  cxxabi  libc++  mutex  new  string  tuple  type_traits  vector
lib/libc++/src/: cstdlib.cpp  cxxabi.cpp  init.cpp  iostream.cpp  libc++.cpp  string.cpp
lib/libc/include/: assert.h  ctype.h  libc.h  math.h  (+3 more)
lib/libk/: CMakeLists.txt
lib/libk-old/: CMakeLists.txt
lib/libmath/: CMakeLists.txt
modules/: CMakeLists.txt  build.sh  cmtoolchain.cmake  daemon.cpp  dummy.cpp  dump.txt  keyboard.cpp  keyboard.txt  linker.ld  mouse.cpp  storage.cpp  test.cpp  tinyubsan.cpp
modules/achi/: CMakeLists.txt  main.cpp
modules/daemon/: CMakeLists.txt  build.sh  main.cpp
modules/dump/: daemon.txt  keyboard.txt  mouse.txt
modules/keyboard/: CMakeLists.txt  keyboard.cpp  keyboard.d  keyboard.elf  main.cpp
modules/kterm/: CMakeLists.txt  main.cpp
modules/mouse/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  boot.asm  boot.cpp  bootinfo.hpp  dummy.cpp  kernel.c  kmain.cpp  linker-x86_64.ld  linker.ld  tinyubsan.cpp
src/boot/: CMakeLists.txt  boot-i686.asm  boot.cpp  boot.hpp  bootinfo.hpp  multiboot2.hpp
src/common/: CMakeLists.txt  module.cpp
src/data/: limine.conf  ree.txt
src/kernel/: CMakeLists.txt  boot.asm  init.cpp  kernel.cpp  kmain-requests.cpp  kmain.cpp  kshell.cpp  kshell.hpp  ksystem-shell.cpp  ksystem.cpp  ksystem.hpp  module.cpp  module.hpp  panic.cpp  panic.hpp  tty.cpp  tty.hpp  ubsan.cpp  video_main.cpp
src/lib/: CMakeLists.txt
src/libc/: CMakeLists.txt  stdio.c  stdio.h
src/libcpp/: stdio.hpp
src/loader/: CMakeLists.txt  boot.asm  elf64.c  enter_kernel.asm  linker.ld  lmain.cpp
src/programs/: CMakeLists.txt  _build.sh  build.sh  linker.ld  makefile  roo.txt
src/programs copy/: build.sh  build2.sh  linker.ld  makefile
src/system/: CMakeLists.txt  asm.asm  asm.cpp  asm.hpp  bitmanip.hpp  cpuid.asm  cpuid.hpp  io.cpp  io.hpp  linker-x86_64.ld  linker.ld  log.hpp  system.cpp  system.hpp
src/x86_64/: boostrap.asm  boot.asm  linker.ld
(+872 files in other folders)
